# piper_sdk

./: .gitignore  CHANGELOG(ZH).MD  CHANGELOG.MD  DESCRIPTION.MD  DEVELOPMENT.MD  LICENSE  MANIFEST.in  Piper SDK.md  README(EN).MD  README(EN).md  README(ZH).MD  README.MD  __init__.py  can_activate.sh  can_config.sh  can_find_and_config.sh  pyproject.toml  rm_tmp.sh  setup.py  version.py
piper_sdk/: __init__.py  can_activate.sh  can_config.sh  can_muti_activate.sh  find_all_can_port.sh  pyproject.toml  version.py
piper_sdk/api/: __init__.py  base.py  config.py  connection.py  gripper.py  motion.py  piper_api.py  safety.py  status.py  system.py
piper_sdk/demo/: detect_arm.MD  detect_arm.py  manage_vcan.py
piper_sdk/demo/V1/: README.MD  piper_ctrl_disable.py  piper_ctrl_enable.py  piper_ctrl_end_pose.py  piper_ctrl_go_zero.py  piper_ctrl_gripper.py  piper_ctrl_joint.py  piper_ctrl_line.py  piper_ctrl_moveC.py  piper_ctrl_reset.py  piper_ctrl_stop.py  piper_read_all_fps.py  piper_read_arm_motor_max_acc_limit.py  piper_read_arm_motor_max_angle_spd.py  (+24 more)
piper_sdk/hardware_port/: __init__.py  can_encapsulation.py  can_encapsulation_v0_3_2.py  can_encapsulation_v0_4_0.py
piper_sdk/interface/: __init__.py  piper_interface.py  piper_interface_v1.py  piper_interface_v2.py
piper_sdk/kinematics/: piper_fk.py
piper_sdk/monitor/: __init__.py  fps.py
piper_sdk/param_map/: __init__.py  protocol_map.py
piper_sdk/piper_param/: piper_param_manager.py
piper_sdk/protocol/: __init__.py  piper_protocol_base.py
piper_sdk/utils/: __init__.py  fps.py  logger_mag.py  tf.py
(+334 files in other folders)
