[build-system]
# requires = ["setuptools >= 40.0", "setuptools_scm>=8"]
requires = ["setuptools >= 40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piper_sdk"
dynamic = ["readme", "version"]
description = "A sdk to control piper"
authors = [
    {name = "RosenYin", email = "yinruocheng321@gmail.com"},
]
license = {text = "MIT License"}
requires-python = ">=3.6"
dependencies = [
    "python-can>=3.3.4",
]
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/agilexrobotics/piper_sdk"
Repository = "https://github.com/agilexrobotics/piper_sdk"
ChangeLog = "https://github.com/agilexrobotics/piper_sdk/blob/master/CHANGELOG.MD"

[tool.setuptools.dynamic]
readme = { file = "README.MD" }